Add futility margin and lead parameters, enhance early-stop conditions, and update test cases